# wpx

./: .gitignore  Dockerfile  README.md  example-output.txt  plugins_full.txt  pyproject.toml  requirements.txt  user_enum_techniques.yml  wpx.py  wpx_core.py  wpx_data.py  wpx_fetch_plugins.py  wpx_finder.py  wpx_output.py  wpx_vulnerability.py
.github/workflows/: docker.yml
data/: README.md  plugins_active.txt  plugins_dead.txt  plugins_full.txt  wpx_fetch_plugins.py
data/archive.org-cache/test-sample/: strip_resources.py
tests/: conftest.py  test_data.py  test_enumerate.py  test_finder.py  test_output.py  test_version.py
